--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
-name: Tests
+name: tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
 
 jobs:
@@ -11,16 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Go 1.15
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.15
+      -
+        name: Set up Go 1.15
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15
 
-    - name: checkout
-      uses: actions/checkout@v2
-    
-    - name: Test
-      run: go test -v -tags=integration ./...
-      env:
-        CHECKLY_API_KEY: ${{ secrets.CHECKLY_API_KEY }}
-        CHECKLY_API_URL: ${{ secrets.CHECKLY_API_URL }}
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+
+      -
+        name: Test
+        run: go test -v -tags=integration ./...
+        env:
+          CHECKLY_API_KEY: ${{ secrets.CHECKLY_API_KEY }}
+          CHECKLY_API_URL: ${{ secrets.CHECKLY_API_URL }}
