--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: release
+name: Release
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           filename: checkly-go-sdk.zip
-          exclusions: '*.git* *_test.go /*testdata/* /*examples/* checkly.png'
+          exclusions: '*.git* *_test.go /*testdata/* /*examples/* checkly.png MAKEFILE'
 
       -
         name: Upload Release
