chore: add danielpaulus as reviewer

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -6,8 +6,9 @@ reviewers:
   - tnolet
   - ianaya89
   - umutuzgur
+  - danielpaulus
 
 skipKeywords:
   - wip
 
-numberOfReviewers: 3
+numberOfReviewers: 4
