chore: update docs, add CoC and issue templates

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           filename: checkly-go-sdk.zip
-          exclusions: '*.git* *_test.go /*fixtures/* /*demo/* checkly.png MAKEFILE'
+          exclusions: '*.git* *_test.go /*fixtures/* /*demo/* MAKEFILE'
 
       -
         name: Upload Release
