--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,19 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
 
-      -
-        name: Zip Release
+      - name: Zip Release
         uses: thedoctor0/zip-release@master
         with:
           filename: checkly-go-sdk.zip
-          exclusions: '*.git* *_test.go /*fixtures/* /*demo/* MAKEFILE'
+          exclusions: "*.git* *_test.go /*fixtures/* /*demo/* MAKEFILE"
 
-      -
-        name: Upload Release
+      - name: Upload Release
         uses: ncipollo/release-action@v1
         with:
           draft: true
